--- a/twilight-sparkle/package.json
+++ b/twilight-sparkle/package.json
@@ -14,7 +14,7 @@
     "trailingComma": "all"
   },
   "dependencies": {
-    "@types/jest": "24.0.15",
+    "@types/jest": "^24.0.15",
     "@types/node": "12.0.10",
     "@types/react": "16.8.22",
     "@types/react-dom": "16.8.4",
@@ -45,7 +45,9 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/react": "^8.0.4",
     "husky": "^3.0.0",
+    "jest-dom": "^3.5.0",
     "prettier": "^1.18.2",
     "pretty-quick": "^1.11.1"
   }
