--- a/twilight-sparkle/package.json
+++ b/twilight-sparkle/package.json
@@ -46,6 +46,7 @@
   },
   "devDependencies": {
     "@testing-library/react": "^8.0.4",
+    "@types/amazon-connect-streams": "^1.3.1",
     "husky": "^3.0.0",
     "jest-dom": "^3.5.0",
     "prettier": "^1.18.2",
